added additional styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- link bootstrap -->
         <link rel="stylesheet" href="Assets/CSS/style.css">
     </head>
-    <body>
+    <body style="background-image: url('Assets/Images/IMG_0136.JPG');">
         
             <header>
                 <div class="container-md">
