--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
 </head>
   
-  <body>
+  <body style="background-image: url('Assets/Images/IMG_0140.JPG');">
     <header>
       <div class="container-md">
           <div class="row">
