--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
 </head>
   
-  <body>
+  <body style="background-image: url('Assets/Images/IMG_0836.JPG');">
     <header>
       <div class="container-md">
           <div class="row">
@@ -36,15 +36,15 @@
         <form>
           <label for="name">Name:</label>
           <br>
-          <input type="text" name="name" placeholder="John Smith" style="width: 100%;"></input>
+          <input class="form-control" type="text" name="name" placeholder="John Smith" style="width: 100%;"></input>
           <br>
           <label for="email">Email:</label>
           <br>
-          <input type="email" name="email" placeholder="example@gmail.com" style="width: 100%;"></input>
+          <input class="form-control" type="email" name="email" placeholder="example@gmail.com" style="width: 100%;"></input>
           <br>
           <label for="message">Message:</label>
           <br>
-          <textarea name="message" style="width: 100%; height: 300px;"></textarea>
+          <textarea class="form-control" name="message" style="width: 100%; height: 300px;"></textarea>
           <br>
           <button>Submit</button>
         </form>
