fixed contact background image bug

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
 </head>
   
-  <body style="background-image: url('Assets/Images/IMG_0836.JPG');">
+  <body style="background-image: url('Assets/Images/IMG_0836.jpg');">
     <header>
       <div class="container-md">
           <div class="row">
