--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,21 @@
 
     <footer>
       <section class="container">
+        <div class="row">
+          <div class="col-sm-4"></div>
+          <div class="col-sm-1">
+            <a href="https://www.linkedin.com/in/keshav-a-a2871393/">
+              <img class="icon" src="https://cdn.icon-icons.com/icons2/1269/PNG/512/1497553283-108_84845.png">
+            </a>
+          </div>
+          <div class="col-sm-2"></div>
+          <div class="col-sm-1">
+            <a href="https://github.com/keshavsavva">
+              <img class="gitIcon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
+            </a>
+          </div>
+          <div class="col-sm-4"></div>
+        </div>
         Copyright &copy; Keshav Avva
       </section>
     </footer>
