added portfolio links for eventHub, Work Day Scheduler, and Coding Quiz Challenge

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,20 +38,20 @@
         <div class="row">
           <div class="col-md-6">
             <div class="banner">
-              <a href="#">
-                <img src="Assets/Images/StockPhoto.jpg" style="margin: 0px; width: 100%;">
+              <a href="https://keshavsavva.github.io/Team3/">
+                <img src="Assets/Images/eventHub.png" style="margin-bottom: 10px; width: 100%;">
                 <div class="text-block">
-                Word Guess
+                EventHub
                 </div>
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="banner">
-              <a href="#">
-                <img src="Assets/Images/StockPhoto.jpg" style="margin: 0px; width: 100%;">
+              <a href="https://keshavsavva.github.io/Homework5/">
+                <img src="Assets/Images/workDay.png" style="margin-bottom: 10px; width: 100%;">
                 <div class="text-block">
-                RPG Game
+                Work Day Scheduler
                 </div>
               </a>
             </div>
@@ -61,10 +61,10 @@
         <div class="row">
           <div class="col-md-6">
             <div class="banner">
-              <a href="#">
-                <img src="Assets/Images/StockPhoto.jpg" style="margin: 0px; width: 100%;">
+              <a href="https://keshavsavva.github.io/Homework4/">
+                <img src="Assets/Images/codingQuiz.png" style="margin-bottom: 10px; width: 100%;">
                 <div class="text-block">
-                Trivia Game
+                Coding Quiz
                 </div>
               </a>
             </div>
