--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,11 @@
               <img class="icon" src="https://cdn.icon-icons.com/icons2/1269/PNG/512/1497553283-108_84845.png">
             </a>
           </div>
-          <div class="col-sm-2"></div>
+          <div class="col-sm-2">
+            <a href="https://drive.google.com/file/d/1M4bGbBCHaYMBLEJKsjOUE141o7zDqJ_i/view?usp=sharing">
+              <img class="gitIcon" src="https://cdn3.iconfinder.com/data/icons/20-business-flat-icons-shadow/96/75-512.png">
+            </a>
+          </div>
           <div class="col-sm-1">
             <a href="https://github.com/keshavsavva">
               <img class="gitIcon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
