fixed minor icon issue, grayed out portfolio imgs, increased about me font size

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           <div class="col-md-6">
             <div class="banner">
               <a href="https://keshavsavva.github.io/Team3/">
-                <img src="Assets/Images/eventHub.png" style="margin-bottom: 10px; width: 100%;">
+                <img class="portImg" src="Assets/Images/eventHub.png">
                 <div class="text-block">
                 EventHub
                 </div>
@@ -49,7 +49,7 @@
           <div class="col-md-6">
             <div class="banner">
               <a href="https://keshavsavva.github.io/Homework5/">
-                <img src="Assets/Images/workDay.png" style="margin-bottom: 10px; width: 100%;">
+                <img class="portImg" src="Assets/Images/workDay.png">
                 <div class="text-block">
                 Work Day Scheduler
                 </div>
@@ -62,7 +62,7 @@
           <div class="col-md-6">
             <div class="banner">
               <a href="https://keshavsavva.github.io/Homework4/">
-                <img src="Assets/Images/codingQuiz.png" style="margin-bottom: 10px; width: 100%;">
+                <img class="portImg" src="Assets/Images/codingQuiz.png" >
                 <div class="text-block">
                 Coding Quiz
                 </div>
@@ -73,7 +73,7 @@
           <div class="col-md-6">
             <div class="banner">
               <a href="#">
-                <img src="Assets/Images/StockPhoto.jpg" style="margin: 0px; width: 100%;">
+                <img class="portImg" src="Assets/Images/StockPhoto.jpg" >
                 <div class="text-block">
                 Info Widget
                 </div>
@@ -86,7 +86,7 @@
           <div class="col-md-6">
             <div class="banner">
               <a href="#">
-                <img src="Assets/Images/StockPhoto.jpg" style="margin: 0px; width: 100%;">
+                <img class="portImg" src="Assets/Images/StockPhoto.jpg" >
                 <div class="text-block">
                 Rock Paper Scissors
                 </div>
@@ -104,17 +104,17 @@
           <div class="col-sm-4"></div>
           <div class="col-sm-1">
             <a href="https://www.linkedin.com/in/keshav-a-a2871393/">
-              <img class="icon" src="https://cdn.icon-icons.com/icons2/1269/PNG/512/1497553283-108_84845.png">
+              <img class="icon" src="Assets/Images/linkedInIcon.png">
             </a>
           </div>
           <div class="col-sm-2">
             <a href="https://drive.google.com/file/d/1M4bGbBCHaYMBLEJKsjOUE141o7zDqJ_i/view?usp=sharing">
-              <img class="gitIcon" src="https://cdn3.iconfinder.com/data/icons/20-business-flat-icons-shadow/96/75-512.png">
+              <img class="icon" src="https://cdn3.iconfinder.com/data/icons/20-business-flat-icons-shadow/96/75-512.png">
             </a>
           </div>
           <div class="col-sm-1">
             <a href="https://github.com/keshavsavva">
-              <img class="gitIcon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
+              <img class="icon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
             </a>
           </div>
           <div class="col-sm-4"></div>
