--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <img src="Assets/Images/headshot.jpg">
+                            <img class="mainPic" src="Assets/Images/headshot.jpg">
                             <p>My name is Keshav Avva and I am from Greensboro, NC.  I just recently graduated from North Carolina State University with a degree in Mechanical Engineering with a minor in Environmental Science.  Since then however, I have been persuing a new career in Full Stack Development.  I am very excited to dive into the world of Web Development and cannot wait to learn more advanced skills. In fact, this page that your reading now is one of my first web development projects!</p>
                             <p>Besides my interests in Web Development, I also have a few fun hobbies! I enjoy playing and listening to music.  I have played guitar for the past couple of years and love learning rock and alternative music.  I may not be the most technically advance musician, but I sure do like noodling on the axe! Besides playing, I also love listening to a variety of genres, including Rock, Alternative, Rap, Electronic, and even Jazz from time to time! </p>
                         </div>
@@ -55,23 +55,23 @@
                     <div class="col-sm-4"></div>
                     <div class="col-sm-1">
                       <a href="https://www.linkedin.com/in/keshav-a-a2871393/">
-                        <img class="icon" src="https://cdn.icon-icons.com/icons2/1269/PNG/512/1497553283-108_84845.png">
+                        <img class="icon" src="Assets/Images/linkedInIcon.png">
                       </a>
                     </div>
                     <div class="col-sm-2">
-                        <a href="https://drive.google.com/file/d/1M4bGbBCHaYMBLEJKsjOUE141o7zDqJ_i/view?usp=sharing">
-                            <img class="gitIcon" src="https://cdn3.iconfinder.com/data/icons/20-business-flat-icons-shadow/96/75-512.png">
-                          </a>
+                      <a href="https://drive.google.com/file/d/1M4bGbBCHaYMBLEJKsjOUE141o7zDqJ_i/view?usp=sharing">
+                        <img class="icon" src="https://cdn3.iconfinder.com/data/icons/20-business-flat-icons-shadow/96/75-512.png">
+                      </a>
                     </div>
                     <div class="col-sm-1">
                       <a href="https://github.com/keshavsavva">
-                        <img class="gitIcon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
+                        <img class="icon" src="https://icons-for-free.com/iconfiles/png/512/github+logo+media+online+share+social+icon-1320168531065664237.png">
                       </a>
                     </div>
                     <div class="col-sm-4"></div>
                   </div>
                   Copyright &copy; Keshav Avva
                 </section>
-            </footer>
+              </footer>
     </body>
 </html>
