added links for eatdaburger, password Generator, + Quaranstream

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,13 @@
           </div>
           <div class="col-md-6">
             <div class="banner">
-              <a href="https://keshavsavva.github.io/Homework5/">
-                <img class="portImg" src="Assets/Images/workDay.png">
+              <a href="https://limitless-chamber-20765.herokuapp.com/landing.html">
+                <img class="portImg" src="Assets/Images/quaranstreamLogo.png">
                 <div class="text-block">
-                Work Day Scheduler
+                QuaranStream
                 </div>
               </a>
             </div>
-            
           </div>
         </div>
         <div class="row">
@@ -68,31 +67,38 @@
                 </div>
               </a>
             </div>
-
           </div>
           <div class="col-md-6">
             <div class="banner">
-              <a href="#">
-                <img class="portImg" src="Assets/Images/StockPhoto.jpg" >
+              <a href="https://keshavsavva.github.io/Homework5/">
+                <img class="portImg" src="Assets/Images/workDay.png">
                 <div class="text-block">
-                Info Widget
+                Work Day Scheduler
                 </div>
               </a>
             </div>
-            
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="banner">
-              <a href="#">
-                <img class="portImg" src="Assets/Images/StockPhoto.jpg" >
+              <a href="https://keshav-eat-da-burger.herokuapp.com/">
+                <img class="portImg" src="Assets/Images/EatDaBurger.png" >
                 <div class="text-block">
-                Rock Paper Scissors
+                Eat-Da-Burger
                 </div>
               </a>
             </div>
-
+          </div>
+          <div class="col-md-6">
+            <div class="banner">
+              <a href="https://keshavsavva.github.io/Homework3/">
+                <img class="portImg" src="Assets/Images/passGen.png" >
+                <div class="text-block">
+                Password Generator
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
